--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrandName</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -32,7 +33,6 @@
             </nav>     
         </nav>
     </container>
-    
   </header>
   <main>
     <section class="hero">
@@ -51,5 +51,34 @@
       </div>
     </section>
   </main>
+  <footer>
+    <div class="footer-bottom">
+      <container>
+        <row>
+          <col-md-2>
+            <h4>Footer Title</h4>
+            <div>Footer text goes here.</div>
+          </col-md-2>
+        </row>
+      </container>
+    </div>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7">
+            <p>Made With Love By Antonio Juan Ríos Fernández. All Right Reserved </p>
+          </div>
+          <div class="col-md-6">
+            <div class="social-icons">
+              <i class="bi bi-facebook"></i>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-twitter"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </footer>
 </body>
 </html>
