Quinto commit del Proyecto

--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrandName</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header>
-    <container>
+    <div class="container">
         <nav class="navbar-style-2 navbar-light">
-            <nav class="navbar-brand">
+            <div class="navbar-brand">
                 <h3 class="title">BrandName</h3>
-            </nav>
-            <nav class="collapse navbar-collapse">
-                <nav class="navbar-nav1">
+            </div>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav1">
                     <ul>
                         <li><a href="#" class="home">Home</a></li>
                         <li><a href="#" class="product">Product</a></li>
                         <li><a href="#" class="pricing">Pricing</a></li>
                         <li><a href="#" class="contact">Contact</a></li>
                     </ul>
-                </nav>
-                <nav class="navbar-nav2">
+                </div>
+                <div class="navbar-nav2">
                     <div class="login-buttons">
                         <a href="#">Login</a>
                         <a href="#" class="join-us">JOIN US</a>
                     </div>
-                </nav>
-            </nav>     
+                </div>
+            </div>     
         </nav>
-    </container>
+    </div>
   </header>
   <main>
     <section class="hero">
@@ -52,29 +53,63 @@
     </section>
   </main>
   <footer>
-    <div class="footer-bottom">
-      <container>
-        <row>
-          <col-md-2>
-            <h4>Footer Title</h4>
-            <div>Footer text goes here.</div>
-          </col-md-2>
-        </row>
-      </container>
-    </div>
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
-            <p>Made With Love By Antonio Juan Ríos Fernández. All Right Reserved </p>
-          </div>
-          <div class="col-md-6">
-            <div class="social-icons">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-instagram"></i>
-              <i class="bi bi-twitter"></i>
+          <div class="col-md-2">
+            <h5>Company Info</h5>
+            <div>
+              <a href="#">About Us</a><br>
+              <a href="#">Carrier</a><br>
+              <a href="#">We are hiring</a><br>
+              <a href="#">Blog</a>
             </div>
           </div>
+          <div class="col-md-2">
+            <h5>Legal</h5>
+            <div>
+              <a href="#">About Us</a><br>
+              <a href="#">Carrier</a><br>
+              <a href="#">We are hiring</a><br>
+              <a href="#">Blog</a>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <h5>Features</h5>
+            <div>
+              <a href="#">Business Marketing</a><br>
+              <a href="#">User Analytic</a><br>
+              <a href="#">Live Chat</a><br>
+              <a href="#">Unlimited Support</a>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <h5>Resources</h5>
+            <div>
+              <a href="#">iOS & Android</a><br>
+              <a href="#">Watch a Demo</a><br>
+              <a href="#">Customers</a><br>
+              <a href="#">API</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h5>Get In Touch</h5>
+            <div>
+              <p class="p1"><i class="bi bi-telephone"></i> (480) 555-0103</p>
+              <p><i class="bi bi-geo-alt"></i> 4517 Washington Ave. Manchester, Kent</p>
+              <p class="p2"><i class="bi bi-envelope-fill"></i> debra.holt@example.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <p>Made With Love By Antonio Juan Ríos Fernández. All Right Reserved</p>
+        <div class="social-icons">
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-twitter"></i></a>
         </div>
       </div>
     </div>
