--- a/pagina2.html
+++ b/pagina2.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="thumb-concept-16">
-                    <svg class="triangle" width="430" height="330" viewBox="0 0 423.93 423.93" fill="none">
+                    <svg class="triangle" width="300" height="290" viewBox="0 0 423.93 423.93" fill="none">
                         <polygon points="0,0 423.93,0 211.965,423.93" fill="#FFFFFF" transform="rotate(180 211.965 211.965)" />
                     </svg>
                     <img src="images/youngStudent.png" alt="Image 1" class="image">
@@ -31,7 +31,7 @@
             <div class="col-md-5">
                 <div class="fixed-width fixed-height">
                     <hr>
-                    <h2 id="section-title-4">Our Popular Courses</h2>
+                    <h2 id="section-title-4">Our Popular<br>Courses</h2>
                     <p class="paragraph">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
                     <a href="#" class="learn-more">Learn More</a>
                 </div>
