--- a/pagina3.html
+++ b/pagina3.html
@@ -13,7 +13,7 @@
     <div class="container text-center my-5">
         <h6 class="practice-advice">Practice Advice</h6>
         <h2 class="approdable-package">Approdable Packages</h2>
-        <p class="paragraph">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+        <p class="paragraph">Problems trying to resolve the conflict between<br> the two major realms of Classical physics: Newtonian mechanics</p>
 
         <div id="packagesCarousel" class="carousel-slide" data-ride="carousel">
             <div class="carousel-inner">
