--- a/pagina4.html
+++ b/pagina4.html
@@ -13,17 +13,17 @@
     <div class="container text-center my-5">
         <h6 class="practice-advice">Practice Advice</h6>
         <h2 class="approdable-package">Most Popular Courses</h2>
-        <p class="paragraph">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+        <p class="paragraph">Problems trying to resolve the conflict between<br> the two major realms of Classical physics: Newtonian mechanics</p>
 
         <div id="packagesCarousel" class="carousel-slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row-carrusel">
                         <div class="col-md-6">
-                            <div class="card">
+                            <div class="card" style="top: 12px;">
                                 <img src="images/fotohombre.jfif" class="card-img-top mx-auto d-block" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                                    <p class="card-text">Slate helps you see how many more days<br> you need to work to<br> reach your financial<br> goal for the month<br> and year.</p>
                                     <div class="stars">
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
@@ -37,10 +37,10 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="card">
+                            <div class="card card-2">
                                 <img src="images/fotomujer.jfif" class="card-img-top mx-auto d-block" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                                <div class="card-body ">
+                                    <p class="card-text">Slate helps you see<br> how many more days<br> you need to work to<br> reach your financial<br> goal for the month<br> and year.</p>
                                     <div class="stars">
                                         <i class="bi bi-star-fill"></i>
                                         <i class="bi bi-star-fill"></i>
