--- a/pagina5.html
+++ b/pagina5.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container text-center my-5">
         <h2 class="main-title fadeIn">FAQ</h2>
-        <p class="subheading fadeIn">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+        <p class="subheading fadeIn">Problems trying to resolve the conflict between<br> the two major realms of Classical physics: Newtonian mechanics</p>
     </div>
     <div class="container">
         <div class="row">
@@ -20,8 +20,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -31,8 +31,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -42,21 +42,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 fadeIn">
-                <div class="card-item slideIn">
-                    <div class="flex-row">
-                        <i class="bi bi-chevron-compact-right"></i>
-                        <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -66,8 +53,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -77,21 +64,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 fadeIn">
-                <div class="card-item slideIn">
-                    <div class="flex-row">
-                        <i class="bi bi-chevron-compact-right"></i>
-                        <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -101,8 +75,8 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
@@ -112,8 +86,30 @@
                     <div class="flex-row">
                         <i class="bi bi-chevron-compact-right"></i>
                         <div>
-                            <h5>the quick fox jumps over the lazy dog</h5>
-                            <h6>Things on a very small scale behave like nothing</h6>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 fadeIn">
+                <div class="card-item slideIn">
+                    <div class="flex-row">
+                        <i class="bi bi-chevron-compact-right"></i>
+                        <div>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 fadeIn">
+                <div class="card-item slideIn">
+                    <div class="flex-row">
+                        <i class="bi bi-chevron-compact-right"></i>
+                        <div>
+                            <h5>the quick fox jumps over the <br>lazy dog</h5>
+                            <h6>Things on a very small scale<br> behave like nothing</h6>
                         </div>
                     </div>
                 </div>
