--- a/pagina6.html
+++ b/pagina6.html
@@ -10,7 +10,7 @@
     <div class="container text-center my-5">
         <h6 class="main-title fadeIn">Newsletter</h6>
         <h2 class="sub-title fadeIn">Get Quality Education</h2>
-        <p class="subheading fadeIn">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+        <p class="subheading fadeIn">Problems trying to resolve the conflict between<br>the two major realms of Classical physics: Newtonian mechanics</p>
     </div>
     <div class="container">
         <form id="subscription-form" class="slideIn">
