--- a/pagina1.html
+++ b/pagina1.html
@@ -11,20 +11,24 @@
         <header>
             <h6 class="practice-advice">Practice Advice</h6>
             <h2 class="most-popular">Most Popular Courses</h2>
-            <p class="paragraph">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics</p>
+            <p class="paragraph">Problems trying to resolve the conflict between <br> the two major realms of Classical physics: Newtonian mechanics</p>
         </header>
         <div class="courses">
             <div class="course">
-                <div class="icon expert-instruction"></div>
+                <div>
+                    <img src="images/school.png" alt="School">
+                </div>
                 <h5>Expert Instruction</h5>
                 <hr>
-                <p class="paragraph-description">The gradual accumulation and small-scale..</p>
+                <p class="paragraph-description">The gradual<br> accumulation and<br> small-scale..</p>
             </div>
             <div class="course">
-                <div class="icon online-courses"></div>
+                <div>
+                    <img src="images/book.png" alt="Book">
+                </div>
                 <h5>2,769 online courses</h5>
                 <hr>
-                <p class="paragraph-description">The gradual accumulation and small-scale..</p>
+                <p class="paragraph-description">The gradual<br>accumulation and<br> small-scale..</p>
             </div>
         </div>
     </div>
