Ultimo commit del Proyecto

--- a/pagina5.html
+++ b/pagina5.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/styles5.css">
 </head>
 <body>
-    <div class="container text-center my-5">
+    <div class="container text-center">
         <h2 class="main-title fadeIn">FAQ</h2>
         <p class="subheading fadeIn">Problems trying to resolve the conflict between<br> the two major realms of Classical physics: Newtonian mechanics</p>
     </div>
